# properties-parser

./: .gitignore  Cargo.toml  README.md
.circleci/: config.yml
res/: demo.properties
src/: error.rs  lexer.rs  lib.rs  main.rs  parser.rs  types.rs
