[package]
name = "propparse"
version = "0.2.5"
edition = "2021"
description = "A library to parse .properties files"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/marcel-baur/properties-parser"
repository = "https://github.com/marcel-baur/properties-parser"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
